--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:mysql://cmpe275-airlines.cyazxyujehyt.us-west-2.rds.a
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
