--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.datasource.url=jdbc:mysql://cmpe275-airlines.cyazxyujehyt.us-west-2.rds.amazonaws.com/airlinedb
 spring.datasource.url=jdbc:mysql://cmpe275-airlines.cyazxyujehyt.us-west-2.rds.amazonaws.com/airlinedb
 spring.datasource.username=admin
 spring.datasource.password=password
