--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://cmpe275-airlines.cyazxyujehyt.us-west-2.rds.amazonaws.com/airlinedb
-spring.datasource.url=jdbc:mysql://cmpe275-airlines.cyazxyujehyt.us-west-2.rds.amazonaws.com/airlinedb
+spring.datasource.url=jdbc:mysql://airlines-cmpe275.cyazxyujehyt.us-west-2.rds.amazonaws.com/airlinedb
 spring.datasource.username=admin
-spring.datasource.password=password
+spring.datasource.password=webjut-xoscig-0Decxo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
