--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<configuration>
+					<mainClass>com.example.Main</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
